--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,9 +34,11 @@
         </div>
 
         <div class="panel panel-default" id="results">
-            <div class="panel-heading">Stuffs</div>
+            <div class="panel-heading">Results</div>
             <div class="panel-body">
                 <div class="row">
+                    <h2 id="predictSR"></h2>
+                    <h2 id="actualSR"></h2>
                     <button class="btn btn-primary">Hi!</button>
                 </div>
             </div>
@@ -67,6 +69,11 @@
           margin-top: 50px;
           display: none;
         }
+
+        .sameline {
+          display: inline;
+          vertical-align: top;
+        }
     </style>
 
 </body>
@@ -85,7 +92,9 @@ let run = () => {
       resp.json().then((json) => {
         $('#results').css('display', 'block');
         $('#predictBtn').text('Predict');
-        alert(json);
+        alert(JSON.stringify(json));
+        $('#predictSR').text(json.predictedrank)
+        $('#actualSR').text(json.actualrank)
       });
     });
 
